...
    }

    var label: LocalizedStringResource {
        switch self {
        case .low: "Low"
        case .moderate: "Moderate"
        case .high: "High"
        case .extreme: "Extreme"
        }
    }
}

extension HotspotStatus {
...
